--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,2 @@
-{
-      "rewrites": [
-        { "source": "/(.*)", "destination": "/" }
-      ]
-    }
+{"rewrites": [{ "source": "/(.*)", "destination": "/" }]}
     
