--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-input-mask": "^2.0.4",
     "react-player": "^2.16.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
