--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-player": "^2.16.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "reactjs-flip-card": "^2.0.3",
     "sweetalert2": "^11.16.0",
     "swiper": "^11.2.2",
     "tailwindcss-motion": "^1.0.0"
